# Android_spcmic_recorder

./: .gitignore  16KB_PAGE_SIZE_FIX.md  PROJECT_STATUS.md  README.md  UI_BEFORE_AFTER.md  UI_ENHANCEMENT_PHASE2_SUMMARY.md  UI_REDESIGN_NOTES.md  UI_REFINEMENTS.md  build.gradle  gradle.properties  gradlew  local.properties  settings.gradle
.github/: copilot-instructions.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  alsa_wrapper.cpp  alsa_wrapper.h  android_audio_recorder.cpp  android_audio_recorder.h  jni_probe.h  lock_free_ring_buffer.h  multichannel_recorder.cpp  multichannel_recorder.h  native-lib.cpp  uac_protocol.cpp  uac_protocol.h  usb_audio_interface.cpp  usb_audio_interface.h  usb_audio_interface_new.h  usb_audio_interface_old.cpp  usb_audio_interface_old.h  usb_audio_interface_tinyalsa.cpp  wav_writer.cpp  wav_writer.h
app/src/main/cpp/jni/: playback_jni.cpp
app/src/main/cpp/matrix_convolver/: fft_engine.cpp  fft_engine.h  ir_data.h  ir_loader.cpp  ir_loader.h  matrix_convolver.cpp  matrix_convolver.h
app/src/main/cpp/playback/: audio_output.cpp  audio_output.h  playback_engine.cpp  playback_engine.h  stereo_downmix.cpp  stereo_downmix.h  wav_file_reader.cpp  wav_file_reader.h
app/src/main/java/com/spcmic/recorder/: AudioRecordingService.kt  LevelMeterView.kt  MainActivity.kt  MainViewModel.kt  RecordFragment.kt  StorageLocationManager.kt  USBAudioRecorder.kt
app/src/main/java/com/spcmic/recorder/location/: GpxLocationRepository.kt  LocationCaptureManager.kt  LocationPreferences.kt  LocationStatus.kt  RecordingLocation.kt
app/src/main/java/com/spcmic/recorder/playback/: ExportMixType.kt  IRPreset.kt  NativePlaybackEngine.kt  PlaybackFragment.kt  PlaybackPreferences.kt  PlaybackViewModel.kt  Recording.kt  RecordingListAdapter.kt  WavMetadataParser.kt
app/src/main/res/anim/: pulse_clip_warning.xml  pulse_recording.xml
app/src/main/res/color/: bottom_nav_color.xml
app/src/main/res/drawable/: background_gradient.xml  button_record.xml  button_record_active.xml  button_record_idle.xml  clip_indicator_background.xml  gradient_background.xml  gradient_purple_background.xml  ic_check_circle.xml  ic_disconnected.xml  ic_launcher_background.xml  ic_levels.xml  ic_location.xml  ic_microphone.xml  ic_share.xml  ic_stop.xml  ic_usb.xml  ic_warning.xml  rounded_panel.xml  spinner_background.xml  status_badge_connected.xml  status_badge_disconnected.xml  timer_card_recording.xml
app/src/main/res/layout/: activity_main.xml  bottom_sheet_settings.xml  fragment_playback.xml  fragment_record.xml  fragment_record_dashboard.xml  fragment_record_old.xml  item_recording.xml  player_controls.xml
app/src/main/res/menu/: bottom_navigation.xml  recording_options.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-sw320dp/: dimens.xml
peaks/: spcmic_recording_20251001_104654.wav.reapeaks  spcmic_recording_20251001_105148.wav.reapeaks  spcmic_recording_20251001_191537.wav.reapeaks  spcmic_recording_20251001_214250.wav.reapeaks  spcmic_recording_20251001_215847.wav.reapeaks  spcmic_recording_20251001_230421.wav.reapeaks  spcmic_recording_20251001_231101.wav.reapeaks  spcmic_recording_20251001_231620.wav.reapeaks  spcmic_recording_20251002_173536.wav.reapeaks  spcmic_recording_20251002_173602.wav.reapeaks  spcmic_recording_20251002_174339.wav.reapeaks  spcmic_recording_20251002_174529.wav.reapeaks  spcmic_recording_20251002_181501.wav.reapeaks  spcmic_recording_20251002_181912.wav.reapeaks
saf_matrixconv/: matrixconv.c  matrixconv_internal.c  matrixconv_internal.h
